prevented the overflow of elements by setting the value of overflow to hidden on the body element

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ body {
   color: #2e2d2d;
   position: relative;
   transition: all 0.3s;
+  overflow: hidden;
 }
 
 /* ////////////// */
